# faraday

./: .gitignore  .pre-commit-config.yaml  README.md  langgraph.json  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: ci.yml
data/base_networks/: case118_no_viol.json  case30_no_viol.json  cigre_mv.json  cigre_mv_modified.json
data/base_networks/ieee69/: generate.py  ieee69.json
data/networks/cigre_mv/: generate.py  net.json
data/networks/test_large_114/: README.md  generate.py  net.json
data/networks/test_massive_2000/: README.md  generate.py  net.json
data/networks/test_mixed_violations/: README.md  generate.py  net.json
data/networks/test_thermal_violations/: README.md  generate.py  net.json
data/networks/test_voltage_violations/: README.md  generate.py  net.json
data/test_networks/case30/case30_light/: metadata.json  net.json
data/test_networks/case30/case30_medium/: metadata.json  net.json
data/test_networks/cigre_mv/: generate_test_network.ipynb
data/test_networks/cigre_mv/cigre_mv_1_large_load/: metadata.json  network.json
data/test_networks/cigre_mv/cigre_mv_2_small_loads/: metadata.json  network.json
data/test_networks/ieee69/: generate_test_network.ipynb
docs/: index.md
energiq_agent/: __init__.py  cli.py  dashboard.py  dashboard2.py  langgraph_dev.py  schemas.py  serve.py
energiq_agent/agents/: base.py  client.py  critic.py  executor.py  graph.py  planner.py  prompts.py
energiq_agent/simulator/: api.py
energiq_agent/tools/: network_generator.py  pandapower.py
energiq_agent/training/: __init__.py  cli.py  data_collector.py
faraday/: __init__.py  cli.py  dashboard.py  langgraph_dev.py  serve.py  utils.py
faraday/agents/: executor.py  graph.py  planner.py  prompts.py
faraday/agents/workflow/: README.md  __init__.py  config.py  control.py  graph.py  state.py
faraday/benchmark/: __init__.py  llm_configs.py  multi_llm_benchmark.py  visualization.py
faraday/dashboard/: README.md  __init__.py  main.py  requirements-dashboard.txt
faraday/dashboard/assets/: styles.css
faraday/dashboard/components/: __init__.py  action_editor.py  comparison_view.py  network_viz.py  status_panel.py
faraday/dashboard/utils/: __init__.py  data_processing.py  session_state.py
faraday/tools/: network_generator.py  pandapower.py
faraday/training/: cli.py  data_collector.py
notebooks/: base_networks.ipynb  cigre_mv.ipynb
scripts/: generate_test_networks.py  run_dashboard.py
tests/: test_base_networks_violations.py  test_network_generator.py
(+15 files in other folders)
