[project]
name = "energiq-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.9.4",
    "numba>=0.61.2",
    "pandapower>=3.1.1",
    "stable-baselines3>=2.6.0",
    "torch>=2.7.1",
]



[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "mkdocs-material>=9.6.14",
    "mknotebooks>=0.8.0",
    "plotly>=6.1.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
]
