[project]
name = "faraday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.8",
    "langchain[anthropic,openai]>=0.3.25",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "langgraph-swarm>=0.0.11",
    "mcp[cli]>=1.9.4",
    "pandapower[all]>=3.1.2",
    "pandas-stubs",
    "rich>=13.9.4",
    "streamlit>=1.46.0",
]

[project.scripts]
faraday = "faraday.cli:main"
faraday-train = "faraday.training.cli:main"

[tool.setuptools]
packages = ["faraday"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.7",
    "mkdocs-material>=9.6.14",
    "mknotebooks>=0.8.0",
    "nbqa>=1.9.1",
    "plotly>=6.1.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.12",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
]
